--- a/index.html
+++ b/index.html
@@ -47,80 +47,83 @@
             </section>
         <!-- About us -->
         <section>
-            <div class="container"></div>
-            <h2>1</h2>
-            <ul>
-                <li class="about-item">
-                    <h3 class="about-list-main-text">Strategy</h3>
-                    <p class="about-text">Our goal is to identify the business problem to walk away with the perfect and
-                        creative solution.
-                    </p>
-                </li>
-                <li class="about-item">
-                    <h3 class="about-list-main-text">Punctuality</h3>
+            <div class="container">
+                <h2>1</h2>
+                <ul>
+                    <li class="about-item">
+                        <h3 class="about-list-main-text">Strategy</h3>
+                        <p class="about-text">Our goal is to identify the business problem to walk away with the perfect and
+                            creative solution.
+                        </p>
+                    </li>
+                    <li class="about-item">
+                        <h3 class="about-list-main-text">Punctuality</h3>
                     <p class="about-text">Bring the key message to the brand's audience for the best price within the
                         shortest possible
                         time.</p>
-                </li>
-                <li class="about-item">
-                    <h3 class="about-list-main-text">Diligence</h3>
-                    <p class="about-text">Research and confirm brands that present the strongest digital growth
-                        opportunities and minimize
-                        risk.</p>
-                </li>
-                <li class="about-item">
-                    <h3 class="about-list-main-text">Technologies</h3>
-                    <p class="about-text">Design practice focused on digital experiences. We bring forth a deep passion
-                        for
-                        problem-solving.</p>
-                </li>
-            </ul>
-        </section>
+                    </li>
+                    <li class="about-item">
+                        <h3 class="about-list-main-text">Diligence</h3>
+                        <p class="about-text">Research and confirm brands that present the strongest digital growth
+                            opportunities and minimize
+                            risk.</p>
+                        </li>
+                        <li class="about-item">
+                            <h3 class="about-list-main-text">Technologies</h3>
+                            <p class="about-text">Design practice focused on digital experiences. We bring forth a deep passion
+                                for
+                                problem-solving.</p>
+                            </li>
+                        </ul>
+                </div>
+                    </section>
         <!-- Our Team -->
         <section class="team">
-            <div class="container "></div>
-            <h2 class="team-main-text">Our Team</h2>
-            <ul>
-                <li class="team-list-item">
-                    <img class="team-img" src="./images/Our Team/Mark.jpg" width="264" alt="Mark Guerrero">
-                    <h3 class="team-list-main-text">Mark Guerrero</h3>
-                    <p class="team-text">Product Designer</p>
-                </li>
-                <li class="team-list-item">
-                    <img class="team-img" src="./images/Our Team/Tom.jpg" width="264" alt="Tom Ford">
-                    <h3 class="team-list-main-text">Tom Ford</h3>
-                    <p class="team-text">Frontend Developer</p>
-                </li>
-                <li class="team-list-item">
-                    <img class="team-img" src="./images/Our Team/Camila.jpg" width="264" alt="Camila Garcia">
-                    <h3 class="team-list-main-text">Camila Garcia</h3>
-                    <p class="team-text">Marketing</p>
-                </li>
-                <li class="team-list-item">
-                    <img class="team-img" src="./images/Our Team/Daniel.jpg" width="264" alt="Daniel Wilson">
-                    <h3 class="team-list-main-text">Daniel Wilson</h3>
-                    <p class="team-text">UI Designer</p>
-                </li>
-            </ul>
+            <div class="container ">
+                <h2 class="team-main-text">Our Team</h2>
+                <ul>
+                    <li class="team-list-item">
+                        <img class="team-img" src="./images/Our Team/Mark.jpg" width="264" alt="Mark Guerrero">
+                        <h3 class="team-list-main-text">Mark Guerrero</h3>
+                        <p class="team-text">Product Designer</p>
+                    </li>
+                    <li class="team-list-item">
+                        <img class="team-img" src="./images/Our Team/Tom.jpg" width="264" alt="Tom Ford">
+                        <h3 class="team-list-main-text">Tom Ford</h3>
+                        <p class="team-text">Frontend Developer</p>
+                    </li>
+                    <li class="team-list-item">
+                        <img class="team-img" src="./images/Our Team/Camila.jpg" width="264" alt="Camila Garcia">
+                        <h3 class="team-list-main-text">Camila Garcia</h3>
+                        <p class="team-text">Marketing</p>
+                    </li>
+                    <li class="team-list-item">
+                        <img class="team-img" src="./images/Our Team/Daniel.jpg" width="264" alt="Daniel Wilson">
+                        <h3 class="team-list-main-text">Daniel Wilson</h3>
+                        <p class="team-text">UI Designer</p>
+                    </li>
+                </ul>
+            </div>
         </section>
         <!-- Portfolio -->
         <section>
-            <h2 class="port-main-text">Our Portfolio</h2>
-            <ul>
-                <li>
-                    <img class="port-img" src="./images/Portfolio/Banking.jpg" alt="Banking App" width="360">
-                    <h3 class="port-list-main-text">Banking App</h3>
-                    <p class="port-list-text">App</p>
-                </li>
-                <li>
-                    <img class="port-img" src="./images/Portfolio/Payment.jpg" alt="Cashless Payment" width="360">
-                    <h3 class="port-list-main-text">Cashless Payment</h3>
-                    <p class="port-list-text">Marketing</p>
-                </li>
-                <li>
-                    <img class="port-img" src="./images/Portfolio/Meditation.jpg" alt="Meditaion App" width="360">
-                    <h3 class="port-list-main-text">Meditation App</h3>
-                    <p class="port-list-text">App</p>
+            <div class="container">
+                <h2 class="port-main-text">Our Portfolio</h2>
+                <ul>
+                    <li>
+                        <img class="port-img" src="./images/Portfolio/Banking.jpg" alt="Banking App" width="360">
+                        <h3 class="port-list-main-text">Banking App</h3>
+                        <p class="port-list-text">App</p>
+                    </li>
+                    <li>
+                        <img class="port-img" src="./images/Portfolio/Payment.jpg" alt="Cashless Payment" width="360">
+                        <h3 class="port-list-main-text">Cashless Payment</h3>
+                        <p class="port-list-text">Marketing</p>
+                    </li>
+                    <li>
+                        <img class="port-img" src="./images/Portfolio/Meditation.jpg" alt="Meditaion App" width="360">
+                        <h3 class="port-list-main-text">Meditation App</h3>
+                        <p class="port-list-text">App</p>
                 </li>
                 <li>
                     <img class="port-img" src="./images/Portfolio/Tax.jpg" alt="Taxi Service" width="360">
@@ -138,6 +141,7 @@
                     <p class="port-list-text">Marketing</p>
                 </li>
             </ul>
+        </div>
         </section>
     </main>
     <!--Page footer-->
